jupyter-notebooks/llm-observability-in-action/manifests/networking/netpol.allow-openwebui-to-langchain.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-openwebui-to-langchain
  namespace: llm-observability
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: langchain-demo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: open-webui
      ports:
        - protocol: TCP
          port: 8000
