jupyter-notebooks/llm-observability-in-action/manifests/networking/netpol.default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: llm-observability
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
